--- a/contact_me.html
+++ b/contact_me.html
@@ -10,8 +10,8 @@
 
 <body>
     <h1>My contact Details</h1>
-    <p>gunjankumarvc@gmail.com</p>
-    <p>+91 8171216033</p>
+    <p>ghghh@gmail.com</p>
+    
     <p>
         <a href="https://www.linkedin.com/in/gunnjann/">LinkedIn</a></p>
     <hr>
